<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">U餐厅非授权</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab2text">关于U餐厅</string>
    <string name="ntab2text">订单管理</string>
    <string name="tab1text">我的餐厅</string>
    <string name="tab3text">选位订餐</string>
    <string name="tab3refresh">刷新</string>
    <string name="tab3choose">筛选</string>
    <string name="preparestring">预定订单</string>
    <string name="prepare">预定订单</string>
    <string name="res_environment">我的餐厅</string>
    <string name="delete">删除菜品</string>
    <string name="title_tab2">餐厅订餐</string>
    <string name="jkdc">猛戳下订</string>
    <string name="sending_request">正在发送请求</string>
    <string name="znj">总价：  &#165;</string>
    <string name="doorder">待处理订单</string>
    <string name="order1">待处理订单</string>
    <string name="detail">订单详情</string>
    <string name="exceptionorder">异常订单</string>
    <string name="historyorder">历史订单</string>
    <string name="menurefresh">菜 单 刷 新</string>
    <string name="history">异常订单</string>
    <string name="myorder">我的订餐</string>
    <string name="about">关于U餐厅</string>
    <string name="ApartString">拆 台</string>
    <string name="MegerString">并 台</string>
    <string name="OperaString">开 台</string>
    <string name="checkedString">选中</string>
    <string name="CanOrder">可订桌</string>
    <string name="about_one">欢迎查看U餐系统信息</string>
    <string name="about_two">"当前软件版本： "</string>
    <string name="about_four">联系人：周先生</string>
    <string name="about_six">手机：18664951695</string>
    <string name="about_five">电话：0755-86955812</string>
    <string name="about_three">Email:zzwwrr96@aliyun.com</string>
    <string name="list_back">返回</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="nodata">暂  无  数  据</string>
    <string name="noData">暂无菜品信息</string>
    <string name="click">点击重新加载</string>
    <string name="menudetails">菜品详情</string>

    <!-- 订单详情 -->
    <string name="zhekou">折扣</string>
    <string name="num">数量</string>
    <string name="total_price">总价</string>
    <string name="telphone">联系电话</string>
    <string name="contacts">联系人</string>
    <string name="choose">选择</string>
    <string name="price">价格</string>
    <string name="detail_msg">详细说明</string>
    <string name="rush_purchase">提交</string>
   <string name="totalprice">订单总价：</string>
    <string name="orderNo">订单编号：</string>
 <string name="ordertime">订单时间：</string>
 <string name="refresh_order">刷新订单</string>
 <string name="refresh_menu">刷新菜品</string>
 <string name="phone">电话号码：</string>
 <string name="repeate">重新加载</string>
 
 
 	 <!-- 下拉刷新 -->
     <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="nopushmsg">暂无数据</string>
 
 
</resources>