<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_x_66"
        android:background="@drawable/title" >

         <Button
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_x_15"
            android:background="@drawable/selector_btn_back"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/list_back"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/tab2text"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_30" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_one"
            android:textSize="@dimen/layout_x_30" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_x_7"
                android:text="@string/about_two"
                android:textSize="@dimen/layout_x_30" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_x_7"
                android:text="1.0.0 "
                android:textSize="@dimen/layout_x_30" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_x_7"
          
            android:text="@string/about_three"
            android:textSize="@dimen/layout_x_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_x_7"
            android:text="@string/about_four"
            android:textSize="@dimen/layout_x_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_x_7"
            android:text="@string/about_five"
            android:textSize="@dimen/layout_x_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_x_7"
            android:text="@string/about_six"
            android:textSize="@dimen/layout_x_30" />
    </LinearLayout>

</RelativeLayout>