<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_x_66"
        android:background="@drawable/title" >

        <Button
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_x_15"
            android:background="@drawable/selector_btn_back"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/list_back"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_24" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/title_tab2"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_27" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_x_150" >

        <ListView
            android:id="@+id/order_list"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_x_150"
            android:layout_gravity="center"
            android:cacheColorHint="#000000" >
        </ListView>

        <TextView
            android:id="@+id/myordertv"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_x_150"
            android:gravity="center"
            android:text="@string/myorder"
            android:textColor="#000000"
            android:textSize="@dimen/layout_x_35" />
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_x_3"
        android:background="@drawable/shape_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_x_60"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/layout_x_33"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/znj"
                android:textColor="#000000"
                android:textSize="@dimen/layout_x_27" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="@dimen/layout_x_27" />
        </LinearLayout>

        <Button
            android:id="@+id/jkdc"
            android:layout_width="@dimen/layout_x_127"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/layout_x_7"
            android:layout_marginRight="@dimen/layout_x_7"
            android:layout_marginTop="@dimen/layout_x_7"
            android:background="@drawable/xiading_button_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/jkdc"
            android:textColor="@color/tab_text_PRE"
            android:textSize="@dimen/layout_x_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_x_1"
            android:background="@drawable/shape_line" />

        <HorizontalScrollView
            android:id="@+id/hsv_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_x_60"
            android:layout_gravity="center_vertical"
            android:background="@color/caipinlei"
            android:fadingEdge="@null"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/hsv_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </android.support.v4.view.ViewPager>

        <TextView
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/click"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/layout_x_18"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>