<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_x_66"
        android:background="@drawable/title" >

         <Button
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_x_15"
            android:background="@drawable/selector_btn_back"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/list_back"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/menurefresh"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_27" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ll_prepare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <ListView
                android:id="@+id/lv_prepare_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nodata_deal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_nodata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nodata"
                android:textColor="#ff00ff"
                android:textSize="@dimen/layout_x_30" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>