<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_x_66"
        android:background="@drawable/title" >

         <Button
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_x_10"
            android:background="@drawable/selector_btn_back"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/list_back"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_x_27" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_x_10"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/ll_menudetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_menudetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/layout_x_8"
            android:gravity="center"
            android:text="@string/menudetails"
            android:textColor="#000000"
            android:textSize="@dimen/layout_x_21" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <GridView
                android:id="@+id/gv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>